src/objects/Volleyball__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Default_Location__c</fullName>
        <label>Default Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Time__c</fullName>
        <label>Default Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Volleyball</label>
</CustomObject>